--- a/viewer_with_legend_gray_new.html
+++ b/viewer_with_legend_gray_new.html
@@ -6,7 +6,7 @@
 <title>桥梁水下河床3D声呐模型孪生系统</title>
 <style>
 :root{
-  --bg:#cccccc;            /* 场景与图例背景保持一致 */
+  --bg:#cccccc;
   --panel:#ffffffee; --text:#222; --muted:#667085;
   --primary:#315cf0; --primary-weak:#e7ecff; --border:#d9d9d9; --shadow:0 6px 20px rgba(0,0,0,.08);
   --safe-b: env(safe-area-inset-bottom, 12px);
@@ -36,14 +36,14 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 /* 主视区 */
 #container{position:fixed;inset:0;top:128px}
 
-/* 底部 HUD / 水印 / 小坐标系：永远在可视底部（手机也可见） */
+/* 底部 HUD / 水印 / 小坐标系 */
 #hud{position:fixed;left:12px;bottom:var(--safe-b);transform:translateY(-6px);background:rgba(0,0,0,.7);color:#fff;padding:8px 10px;border-radius:8px;font-size:13px;white-space:pre;z-index:24}
 #wm{position:fixed;left:12px;bottom:calc(var(--safe-b) + 64px);opacity:.10;z-index:10;pointer-events:none}
 #wm img{width:96px;height:96px;object-fit:contain}
 #axisWrap{position:fixed;right:12px;bottom:var(--safe-b);width:160px;height:160px;pointer-events:none;z-index:24}
 #axisCanvas{position:absolute;inset:0;width:160px;height:160px;background:transparent;pointer-events:auto}
 
-/* 居中加载进度条 */
+/* 居中进度条 */
 #progressWrap{
   position:fixed; left:50%; top:50%; transform:translate(-50%,-50%);
   min-width:240px; padding:12px 16px; background:rgba(0,0,0,.7); color:#fff;
@@ -53,7 +53,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 #progressBar{width:100%; height:10px; background:rgba(255,255,255,.25); border-radius:999px; overflow:hidden; margin-top:8px}
 #progressFill{height:100%; width:0%; background:#4ad5ff; border-radius:999px; transition:width .2s ease}
 
-/* 左侧图例：背景匹配场景色；刻度 Times New Roman，靠近色带并置于其左侧 */
+/* 左侧图例：把“深度放大”也并排放进来 */
 #legendDock{
   position:fixed; left:12px; top:50%; transform:translateY(-50%); z-index:22;
   display:flex; flex-direction:column; align-items:flex-start; gap:6px; pointer-events:none;
@@ -63,7 +63,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
   border:1px solid rgba(0,0,0,.2);
 }
 #legendWrap{
-  display:flex; align-items:flex-start; gap:6px;
+  display:flex; align-items:flex-start; gap:8px;
   background:var(--bg); border:1px solid rgba(0,0,0,.25);
   border-radius:6px; padding:6px; pointer-events:auto;
 }
@@ -74,8 +74,19 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 }
 #legendTicks div{height:calc(240px/10); display:flex; align-items:center; justify-content:flex-end; padding-right:2px}
 
-/* 顶部状态文本（仍保留） */
-#status{margin-left:auto}
+/* 嵌入在图例右侧的“深度放大”竖向滑条 */
+#zPanel{
+  height:240px; width:40px;
+  display:flex; flex-direction:column; align-items:center; gap:6px;
+  background:rgba(255,255,255,.9); border:1px solid rgba(0,0,0,.15);
+  border-radius:6px; padding:6px 4px;
+}
+#zPanel input[type=range]{
+  writing-mode: bt-lr; -webkit-appearance: slider-vertical;
+  width:26px; height:100%;
+}
+#zPanel .label{font-size:12px;line-height:1.1;text-align:center;color:#333}
+#zPanel .val{font-size:12px;color:#333}
 </style>
 
 <script type="importmap">{"imports":{"three":"./three.module.js"}}</script>
@@ -88,7 +99,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
     <div id="brand"><img src="./logo.png" alt="长安大学"/><span class="name">长安大学</span></div>
   </header>
 
-  <!-- 工具栏（两行） -->
+  <!-- 工具栏 -->
   <section id="toolbar">
     <div id="g1" class="row">
       <div class="group" style="grid-column:span 12;">
@@ -112,21 +123,21 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
   <!-- 主视区 -->
   <div id="container"></div>
 
-  <!-- 左侧图例（标题 + 离散色条 + 刻度） -->
+  <!-- 左侧：图例 + （并排）深度放大 -->
   <aside id="legendDock">
     <div id="legendTitle">河床深度 / m</div>
     <div id="legendWrap">
       <div id="legendTicks"></div>
       <canvas id="legend" width="24" height="240"></canvas>
+
+      <!-- 深度放大滑条：与图例同高并排 -->
+      <div id="zPanel">
+        <div class="label">深度<br>放大</div>
+        <input id="zScale" type="range" min="1" max="10" step="0.1" value="1" aria-label="深度放大">
+        <div id="zScaleLabel" class="val">×1.0</div>
+      </div>
     </div>
   </aside>
-
-  <!-- 右侧：深度放大（Z 轴，竖向滑条） -->
-  <div id="zPanel" style="position:fixed;right:12px;top:140px;bottom:100px;width:48px;display:flex;flex-direction:column;align-items:center;gap:8px;z-index:26;background:rgba(255,255,255,.85);border-radius:12px;padding:10px;box-shadow:0 4px 16px rgba(0,0,0,.08);">
-    <div style="font-size:12px;text-align:center;line-height:1.1;">深度<br>放大</div>
-    <input id="zScale" type="range" min="1" max="10" step="0.1" value="1" style="writing-mode:bt-lr;-webkit-appearance:slider-vertical;width:28px;height:100%;" aria-label="深度放大">
-    <div id="zScaleLabel" style="font-size:12px;">×1.0</div>
-  </div>
 
   <!-- 居中进度条 -->
   <div id="progressWrap">
@@ -158,7 +169,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 
     const controls = new OrbitControls(camera, renderer.domElement);
     controls.enableDamping = true;
-    controls.rotateSpeed = -1; // ← 反转旋转方向
+    controls.rotateSpeed = -1;
 
     scene.add(new THREE.AmbientLight(0xffffff, 0.6));
     const d = new THREE.DirectionalLight(0xffffff, 0.9); d.position.set(120,220,120); scene.add(d);
@@ -194,7 +205,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
     const zScaleEl = document.getElementById('zScale');
     const zScaleLabel = document.getElementById('zScaleLabel');
 
-    // 居中进度
+    // 进度
     const progressWrap = document.getElementById('progressWrap');
     const progressText = document.getElementById('progressText');
     const progressFill = document.getElementById('progressFill');
@@ -202,20 +213,20 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
     /* 变量 */
     const loader=new PLYLoader(); let currentObj=null, asPoints=false;
     let measureA=null, measureB=null, measureLine=null, measureAMarker=null, measureBMarker=null;
-    let pickMarker=null; const rc=new THREE.Raycaster(), mouse=new THREE.Vector2();
+    let pickMarker=null;
 
-    // —— 新增：当前 Z 倍率 & 应用函数（如为 Y 轴为竖直，请改 set(1,v,1)）——
+    // —— Z 倍率 & 应用函数（若竖直为 Y，改成 set(1, v, 1)）——
     let currentZ = 1;
     function applyZScale(v){
       currentZ = v;
       if(currentObj){ currentObj.scale.set(1, 1, v); }
     }
 
-    /* 图例：固定“河床深度 / m”，-10~-4，10 段离散（可被 *.legend.json 覆盖范围与颜色） */
+    /* 图例：默认 10 段离散，可被 *.legend.json 覆盖 */
     const legendCv=document.getElementById('legend'); const lctx=legendCv.getContext('2d'); const ticksEl=document.getElementById('legendTicks');
     let legendSpec = {
       min:-10.0, max:-4.0,
-      colors: ['#0010a8','#123fdf','#1491ff','#18cfff','#18fffb','#55ff13','#c7ff00','#ffd200','#ff7a00','#e10000'] // 底→顶
+      colors: ['#0010a8','#123fdf','#1491ff','#18cfff','#18fffb','#55ff13','#c7ff00','#ffd200','#ff7a00','#e10000']
     };
     function drawLegendDiscrete(){
       const n=legendSpec.colors.length, w=legendCv.width, h=legendCv.height, seg=h/n;
@@ -263,9 +274,9 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 
     function fitObject(obj){const b=new THREE.Box3().setFromObject(obj);const s=b.getSize(new THREE.Vector3());
       const c=b.getCenter(new THREE.Vector3());const md=Math.max(s.x,s.y,s.z)||1;const dist=md/(2*Math.tan(Math.PI*camera.fov/360));
-      const dir = new THREE.Vector3(-1, 1, 0.5).normalize(); // 调整数值以改变角度
+      const dir = new THREE.Vector3(-1, 1, 0.5).normalize();
       camera.position.copy(c.clone().add(dir.multiplyScalar(dist*2)));
-      camera.up.set(0, 0, 1); // 如果要 Z 朝下
+      camera.up.set(0, 0, 1);
       controls.target.copy(c);controls.update();camera.near=Math.max(0.01,dist/1000);camera.far=dist*10000;camera.updateProjectionMatrix();}
 
     function clearMeasure(){measureA=measureB=null;
@@ -279,6 +290,8 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
     /* 渲染对象（默认曲面） */
     function makePoints(geo){const hasColor=!!geo.getAttribute('color');const mat=new THREE.PointsMaterial({size:parseFloat(pointSize.value),vertexColors:hasColor});return new THREE.Points(geo,mat);}
     function makeMesh(geo){if(geo.index) geo=geo.toNonIndexed(); geo.computeVertexNormals?.();const mat=new THREE.MeshLambertMaterial({vertexColors:true,side:THREE.DoubleSide});return new THREE.Mesh(geo,mat);}
+
+    const loader=new PLYLoader(); let asPoints=false;
 
     async function loadPLY(url){
       statusEl.textContent='加载中...';
@@ -294,7 +307,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
         currentObj = asPoints? makePoints(geo): makeMesh(geo);
         root.add(currentObj);
 
-        // —— 新增：加载完成后按当前倍率应用 Z 放大 ——
+        // 加载完成后按当前倍率应用 Z 放大
         applyZScale(currentZ);
 
         fitObject(currentObj);
@@ -330,20 +343,19 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
       if(currentObj&&currentScene?.plyUrl) loadPLY(currentScene.plyUrl);});
     pickBtn.addEventListener('click',()=>{ toggle(pickBtn); if(isOn(pickBtn)) pickBtn.textContent='拾取✓'; else pickBtn.textContent='拾取';
       if(isOn(pickBtn)) {measureBtn.setAttribute('aria-pressed','false'); measureBtn.textContent='测距';}});
-    measureBtn.addEventListener('click',()=>{ toggle(measureBtn); if(isOn(measureBtn)) measureBtn.textContent='测距✓'; else measureBtn.textContent='测距';
+    measureBtn.addEventListener('click',()=>{ toggle(measureBtn); if(isOn(measureBtn)) measureBtn.textContent='测距✓'; else measureBtn.text内容='测距';
       if(isOn(measureBtn)) {pickBtn.setAttribute('aria-pressed','false'); pickBtn.textContent='拾取';}});
     clearBtn.addEventListener('click',()=>{ clearMeasure(); clearPick(); hud.textContent='已清除测距/拾取结果'; });
 
-    // —— 新增：绑定“深度放大”滑条 —— 
+    // 绑定“深度放大”滑条
     zScaleEl.addEventListener('input', ()=>{
       const v = parseFloat(zScaleEl.value) || 1;
       applyZScale(v);
       zScaleLabel.textContent = '×' + v.toFixed(1);
     });
-    // 初始应用一次
     applyZScale(parseFloat(zScaleEl.value) || 1);
 
-    /* 主画布点击：拾取/测距（带标记+线段） */
+    /* 主画布点击：拾取/测距 */
     renderer.domElement.addEventListener('pointerdown',(e)=>{
       if(!currentObj) return; if(!isOn(pickBtn)&&!isOn(measureBtn)) return;
       const r=renderer.domElement.getBoundingClientRect(); const mouse=new THREE.Vector2(
@@ -351,7 +363,8 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
       const rc=new THREE.Raycaster(); rc.setFromCamera(mouse,camera);
       const h=rc.intersectObject(currentObj,true); if(!h.length) return; const p=h[0].point.clone();
 
-      if(isOn(pickBtn)){ clearPick(); pickMarker=makeMarker(0x9a4dff); pickMarker.position.copy(p); root.add(pickMarker);
+      if(isOn(pickBtn)){ clearPick(); const s=sceneScale()*0.012;
+        const mk=makeMarker(0x9a4dff); mk.position.copy(p); root.add(mk); pickMarker=mk;
         hud.textContent=`拾取\nX:${p.x.toFixed(3)}\nY:${p.y.toFixed(3)}\nZ:${p.z.toFixed(3)}`; }
       if(isOn(measureBtn)){
         if(!measureA){ measureA=p.clone(); if(measureAMarker) root.remove(measureAMarker);
@@ -368,11 +381,9 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
       }
     });
 
-    /* 下拉数据 */
+    /* 下拉数据（支持 ?scene=） */
     let bridges=[], scenes=[], currentScene=null;
-    function getParam(name){
-      return new URLSearchParams(location.search).get(name);
-    }
+    function getParam(name){ return new URLSearchParams(location.search).get(name); }
     async function loadIndex(){
       const res = await fetch('./index.json?_=' + Date.now());
       const data = await res.json();
@@ -390,33 +401,23 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
         if (currentScene) {
           bridgeSel.value = currentScene.bridgeId;
           const sameBridgeScenes = scenes.filter(s => s.bridgeId === currentScene.bridgeId);
-          dateSel.innerHTML = sameBridgeScenes
-            .map(s => `<option value="${s.id}">${s.date}</option>`)
-            .join('');
+          dateSel.innerHTML = sameBridgeScenes.map(s => `<option value="${s.id}">${s.date}</option>`).join('');
           dateSel.value = currentScene.id;
           loadPLY(currentScene.plyUrl);
           return;
-       }
-     }
-
-     // 原默认逻辑
-     fillDates();
-     const id = dateSel.value;
-     currentScene = scenes.find(x => x.id === id);
-     if (currentScene) loadPLY(currentScene.plyUrl);
-   }
+        }
+      }
+      // 默认
+      fillDates();
+      const id = dateSel.value;
+      currentScene = scenes.find(x => x.id === id);
+      if (currentScene) loadPLY(currentScene.plyUrl);
+    }
     function fillDates(){const bid=document.getElementById('bridgeSel').value; const arr=scenes.filter(s=>s.bridgeId===bid);
       document.getElementById('dateSel').innerHTML=arr.map(s=>`<option value="${s.id}">${s.date}</option>`).join('');}
     document.getElementById('bridgeSel').addEventListener('change',()=>{fillDates(); const id=document.getElementById('dateSel').value; currentScene=scenes.find(x=>x.id===id);});
     document.getElementById('dateSel').addEventListener('change',()=>{const id=document.getElementById('dateSel').value; currentScene=scenes.find(x=>x.id===id);});
     document.getElementById('loadBtn').addEventListener('click',()=>{const id=document.getElementById('dateSel').value; currentScene=scenes.find(x=>x.id===id); if(currentScene) loadPLY(currentScene.plyUrl);});
-
-    /* 视图对正 */
-    function getCenter(){ if(root.children.length===0) return new THREE.Vector3(); return new THREE.Box3().setFromObject(root).getCenter(new THREE.Vector3());}
-    function distTo(c){ return camera.position.clone().sub(c).length(); }
-    function snapToAxis(a){ const c=getCenter(); const dist=Math.max(1,distTo(c)); let pos=new THREE.Vector3(); let up=new THREE.Vector3(0,0,1);
-      if(a==='X'){pos.set(dist,0,0); up.set(0,0,1);} if(a==='Y'){pos.set(0,dist,0); up.set(0,0,1);} if(a==='Z'){pos.set(0,0,dist); up.set(0,1,0);}
-      camera.up.copy(up); camera.position.copy(c.clone().add(pos)); controls.target.copy(c); controls.update(); }
 
     /* 自适应 */
     window.addEventListener('resize',()=>{ camera.aspect=window.innerWidth/(window.innerHeight-128); camera.updateProjectionMatrix();
