--- a/viewer_with_legend_gray_new1.html
+++ b/viewer_with_legend_gray_new1.html
@@ -155,6 +155,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 
   <script type="module">
     import * as THREE from 'three';
+    window.THREE = THREE;
     import { OrbitControls } from './OrbitControls.js';
     import { PLYLoader } from './PLYLoader.js';
 
