--- a/viewer_with_legend_gray_new1.html
+++ b/viewer_with_legend_gray_new1.html
@@ -157,7 +157,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
     import * as THREE from 'three';
     window.THREE = THREE;
     import { OrbitControls } from './OrbitControls.js';
-    import { PLYLoader } from './PLYLoader.js';
+    import { PLYLoader } from './PLYLoader.js?v=20251210';
 
     /* 场景 */
     const scene = new THREE.Scene();
